WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
187303
RealtimeIncomingVideoSources: Do not call stopProducingData() when not producing data
https://bugs.webkit.org/show_bug.cgi?id=187303
Summary
RealtimeIncomingVideoSources: Do not call stopProducingData() when not produc...
Thibault Saunier
Reported
2018-07-03 14:40:09 PDT
RealtimeIncomingVideoSources: Do not call stopProducingData() when not producing data
Attachments
Patch
(1.76 KB, patch)
2018-07-03 14:42 PDT
,
Thibault Saunier
no flags
Details
Formatted Diff
Diff
Patch
(1.76 KB, patch)
2018-07-03 15:17 PDT
,
Thibault Saunier
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews201 for win-future
(12.79 MB, application/zip)
2018-07-03 18:14 PDT
,
EWS Watchlist
no flags
Details
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Thibault Saunier
Comment 1
2018-07-03 14:42:44 PDT
Created
attachment 344223
[details]
Patch
youenn fablet
Comment 2
2018-07-03 15:00:12 PDT
Comment on
attachment 344223
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=344223&action=review
> Source/WebCore/platform/mediastream/RealtimeIncomingVideoSource.h:51 > + stopProducingData();
We probably want to call stop() instead.
Thibault Saunier
Comment 3
2018-07-03 15:17:09 PDT
Created
attachment 344228
[details]
Patch
Thibault Saunier
Comment 4
2018-07-03 15:17:44 PDT
(In reply to youenn fablet from
comment #2
)
> Comment on
attachment 344223
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=344223&action=review
> > > Source/WebCore/platform/mediastream/RealtimeIncomingVideoSource.h:51 > > + stopProducingData(); > > We probably want to call stop() instead.
Now calling stop() directly.
EWS Watchlist
Comment 5
2018-07-03 18:14:47 PDT
Comment on
attachment 344228
[details]
Patch
Attachment 344228
[details]
did not pass win-ews (win): Output:
https://webkit-queues.webkit.org/results/8430828
New failing tests: http/tests/security/canvas-remote-read-remote-video-localhost.html
EWS Watchlist
Comment 6
2018-07-03 18:14:59 PDT
Created
attachment 344250
[details]
Archive of layout-test-results from ews201 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews201 Port: win-future Platform: CYGWIN_NT-6.1-2.9.0-0.318-5-3-x86_64-64bit
EWS
Comment 7
2018-07-04 12:41:28 PDT
Comment on
attachment 344228
[details]
Patch Rejecting
attachment 344228
[details]
from review queue.
tsaunier@gnome.org
does not have reviewer permissions according to
https://trac.webkit.org/browser/trunk/Tools/Scripts/webkitpy/common/config/contributors.json
. - If you do not have reviewer rights please read
http://webkit.org/coding/contributing.html
for instructions on how to use bugzilla flags. - If you have reviewer rights please correct the error in Tools/Scripts/webkitpy/common/config/contributors.json by adding yourself to the file (no review needed). The commit-queue restarts itself every 2 hours. After restart the commit-queue will correctly respect your reviewer rights.
WebKit Commit Bot
Comment 8
2018-07-04 13:12:43 PDT
Comment on
attachment 344228
[details]
Patch Clearing flags on attachment: 344228 Committed
r233509
: <
https://trac.webkit.org/changeset/233509
>
WebKit Commit Bot
Comment 9
2018-07-04 13:12:44 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 10
2018-07-04 13:14:13 PDT
<
rdar://problem/41827186
>
Dawei Fenton (:realdawei)
Comment 11
2018-07-10 11:33:57 PDT
(In reply to WebKit Commit Bot from
comment #8
)
> Comment on
attachment 344228
[details]
> Patch > > Clearing flags on attachment: 344228 > > Committed
r233509
: <
https://trac.webkit.org/changeset/233509
>
been seeing flaky crashes on High Sierra that started occurring shortly after this revision.
https://build.webkit.org/results/Apple%20High%20Sierra%20Release%20WK2%20(Tests)/r233683%20(5540)/webrtc/video-with-receiver-crash-log.txt
Application Specific Information: CRASHING TEST: webrtc/video-with-data-channel.html Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 com.apple.WebCore 0x0000000349512874 WebCore::TrackPrivateBase::~TrackPrivateBase() + 4 (TrackPrivateBase.h:57) 1 com.apple.JavaScriptCore 0x000000034d33dfde WTF::dispatchFunctionsFromMainThread() + 318 (MainThread.cpp:132) 2 com.apple.JavaScriptCore 0x000000034d33ecdf WTF::timerFired(__CFRunLoopTimer*, void*) + 31 (MainThreadMac.mm:110) 3 com.apple.CoreFoundation 0x00007fff41f9b704 __CFRUNLOOP_IS_CALLING_OUT_TO_A_TIMER_CALLBACK_FUNCTION__ + 20 4 com.apple.CoreFoundation 0x00007fff41f9b384 __CFRunLoopDoTimer + 1108 5 com.apple.CoreFoundation 0x00007fff41f9ae7a __CFRunLoopDoTimers + 346 6 com.apple.CoreFoundation 0x00007fff41f9261b __CFRunLoopRun + 2427 7 com.apple.CoreFoundation 0x00007fff41f91a07 CFRunLoopRunSpecific + 487 8 com.apple.HIToolbox 0x00007fff4126fd96 RunCurrentEventLoopInMode + 286 9 com.apple.HIToolbox 0x00007fff4126fb06 ReceiveNextEventCommon + 613 10 com.apple.HIToolbox 0x00007fff4126f884 _BlockUntilNextEventMatchingListInModeWithFilter + 64 11 com.apple.AppKit 0x00007fff3f522a73 _DPSNextEvent + 2085 12 com.apple.AppKit 0x00007fff3fcb8e34 -[NSApplication(NSEvent) _nextEventMatchingEventMask:untilDate:inMode:dequeue:] + 3044 13 com.apple.AppKit 0x00007fff3f517885 -[NSApplication run] + 764 14 com.apple.AppKit 0x00007fff3f4e6a72 NSApplicationMain + 804 15 libxpc.dylib 0x00007fff6a690f57 _xpc_objc_main + 580 16 libxpc.dylib 0x00007fff6a68fbaa xpc_main + 417 17 com.apple.WebKit.WebContent 0x0000000109fd56b5 main + 485 18 libdyld.dylib 0x00007fff6a336015 start + 1
youenn fablet
Comment 12
2018-07-10 14:30:34 PDT
I was able to reproduce the crash with: Tools/Scripts/run-webkit-tests --no-retry LayoutTests/webrtc/video-addTrack.html --iterations=1000 -f -g --exit-after-n-failures=1
youenn fablet
Comment 13
2018-07-10 14:31:50 PDT
I do not think this is related to this patch in particular though.
youenn fablet
Comment 14
2018-07-10 14:36:42 PDT
According flakiness dashboard, some similar crashes start t happen as soon as
https://trac.webkit.org/log/webkit/?verbose=on&rev=233497&stop_rev=233495
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug