RealtimeIncomingVideoSources: Call stop() directly in the destructor https://bugs.webkit.org/show_bug.cgi?id=187303

Patch by Thibault Saunier <tsaunier@igalia.com> on 2018-07-04
Reviewed by Youenn Fablet.

Avoiding to call stopProducingData when we are not actually producing data.

This fixes tests that will run once the WPE/GTK PeerConnection implementation is merged.

* platform/mediastream/RealtimeIncomingVideoSource.h:
(WebCore::RealtimeIncomingVideoSource::~RealtimeIncomingVideoSource):

Canonical link: https://commits.webkit.org/202593@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@233509 268f45cc-cd09-0410-ab3c-d52691b4dbfc